--- a/frontend/src/components/side-nav-component/side-nav-component.html
+++ b/frontend/src/components/side-nav-component/side-nav-component.html
@@ -1,6 +1,62 @@
-<mat-drawer-container class="example-container">
-  <mat-drawer mode="side" opened>Drawer content</mat-drawer>
-  <mat-drawer-content>
-    <ng-content/>
-  </mat-drawer-content>
-</mat-drawer-container>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav
+    #drawer
+    id="app-sidenav"
+    class="sidenav"
+    mode="side"
+    opened
+    position="start"
+  >
+    <app-flex [vertical]="true" justify="space-between" [gap]="0" style="height: 100%">
+      <div>
+        <div class="sidenav-header">
+          <button mat-icon-button type="button" aria-label="Toggle menu" (click)="drawer.toggle()"
+                  [attr.aria-controls]="'app-sidenav'" [attr.aria-expanded]="drawer.opened">
+            <mat-icon>menu_open</mat-icon>
+          </button>
+          <span class="app-title">Bank Tracker</span>
+        </div>
+
+        <nav aria-label="Main navigation">
+          <mat-nav-list>
+            <app-flex [vertical]="true" [gap]="0" justify="center">
+              <a mat-list-item routerLink="/home" class="nav-item" routerLinkActive="active" #rlaHome="routerLinkActive"
+                 [routerLinkActiveOptions]="{ exact: true }" [attr.aria-current]="rlaHome.isActive ? 'page' : null">
+                <mat-icon matListItemIcon>home</mat-icon>
+                <span matListItemTitle>Home</span>
+                <span matListItemLine>Dashboards</span>
+              </a>
+              <a mat-list-item routerLink="/config" class="nav-item" routerLinkActive="active"
+                 #rlaConfig="routerLinkActive" [routerLinkActiveOptions]="{ exact: true }"
+                 [attr.aria-current]="rlaConfig.isActive ? 'page' : null">
+                <mat-icon matListItemIcon>gear</mat-icon>
+                <span matListItemTitle>Config</span>
+                <span matListItemLine>Setup your data</span>
+              </a>
+            </app-flex>
+          </mat-nav-list>
+        </nav>
+      </div>
+
+      <mat-nav-list aria-label="Account actions">
+        <a mat-list-item class="nav-item">
+          <mat-icon matListItemIcon>logout</mat-icon>
+          <span matListItemTitle>Logout</span>
+        </a>
+      </mat-nav-list>
+    </app-flex>
+  </mat-sidenav>
+
+  <mat-sidenav-content class="content">
+    @if (!drawer.opened) {
+      <div class="content-header">
+        <button mat-icon-button type="button" aria-label="Open menu" (click)="drawer.toggle()"
+                [attr.aria-controls]="'app-sidenav'" [attr.aria-expanded]="drawer.opened">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </div>
+    }
+
+    <ng-content></ng-content>
+  </mat-sidenav-content>
+</mat-sidenav-container>
