--- a/frontend/src/components/configurator/configurator-component/configurator-component.html
+++ b/frontend/src/components/configurator/configurator-component/configurator-component.html
@@ -11,16 +11,32 @@
   </mat-card-actions>
 
   <mat-card-content>
-    <table mat-table [dataSource]="data()" class="mat-elevation-z8" style="width: 100%;">
-
+    <table mat-table [dataSource]="data()" class="mat-elevation-z8" style="width: 100%">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Description </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        <th mat-header-cell *matHeaderCellDef>Description</th>
+        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="recurring">
+        <th mat-header-cell *matHeaderCellDef>Recurring</th>
+        <td mat-cell *matCellDef="let element">{{ element.recurring ? 'Yes' : 'No' }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef>Amount</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.amount | currency: element.currency }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Date</th>
+        <td mat-cell *matCellDef="let element">{{ element.date | date: 'short' }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
