--- a/frontend/src/app/components/configurator/configurator-component/configurator-component.html
+++ b/frontend/src/app/components/configurator/configurator-component/configurator-component.html
@@ -1,46 +1,52 @@
 <mat-card appearance="outlined">
-  <mat-card-header>
-    <mat-card-title>Configurations</mat-card-title>
-  </mat-card-header>
+  @if (loading()) {
+    <mat-card-header>
+      <mat-card-title>Loading Configurations...</mat-card-title>
+    </mat-card-header>
+  } @else {
+    <mat-card-header>
+      <mat-card-title>Configurations</mat-card-title>
+    </mat-card-header>
 
-  <mat-card-actions align="end">
-    <button mat-flat-button color="primary" (click)="onCreateClicked()">
-      <mat-icon aria-hidden="true">add</mat-icon>
-      Create New
-    </button>
-  </mat-card-actions>
+    <mat-card-actions align="end">
+      <button mat-flat-button color="primary" (click)="onCreateClicked()">
+        <mat-icon aria-hidden="true">add</mat-icon>
+        Create New
+      </button>
+    </mat-card-actions>
 
-  <mat-card-content>
-    <table mat-table [dataSource]="data()" class="mat-elevation-z8" style="width: 100%">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
+    <mat-card-content>
+      <table mat-table [dataSource]="data()" class="mat-elevation-z8" style="width: 100%">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-      </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef>Description</th>
+          <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="recurring">
-        <th mat-header-cell *matHeaderCellDef>Recurring</th>
-        <td mat-cell *matCellDef="let element">{{ element.recurring ? 'Yes' : 'No' }}</td>
-      </ng-container>
+        <ng-container matColumnDef="recurring">
+          <th mat-header-cell *matHeaderCellDef>Recurring</th>
+          <td mat-cell *matCellDef="let element">{{ element.recurring ? 'Yes' : 'No' }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef>Amount</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.amount | currency: element.currency }}
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="amount">
+          <th mat-header-cell *matHeaderCellDef>Amount</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.amount | currency: element.currency }}
+          </td>
+        </ng-container>
 
-      <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef>Date</th>
-        <td mat-cell *matCellDef="let element">{{ element.date | date: 'short' }}</td>
-      </ng-container>
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef>Date</th>
+          <td mat-cell *matCellDef="let element">{{ element.date | date: 'short' }}</td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-  </mat-card-content>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </mat-card-content>
+  }
 </mat-card>
