--- a/frontend/src/app/components/configurator/monthly-recap-component/monthly-recap-component.html
+++ b/frontend/src/app/components/configurator/monthly-recap-component/monthly-recap-component.html
@@ -20,16 +20,25 @@
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          <td mat-footer-cell *matFooterCellDef class="footer-cell-label">Totals</td>
         </ng-container>
 
         <ng-container matColumnDef="description">
           <th mat-header-cell *matHeaderCellDef>Description</th>
           <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+          <td mat-footer-cell *matFooterCellDef>{{ recordCount() }} records</td>
         </ng-container>
 
         <ng-container matColumnDef="recurring">
           <th mat-header-cell *matHeaderCellDef>Recurring</th>
           <td mat-cell *matCellDef="let element">{{ element.recurring ? 'Yes' : 'No' }}</td>
+          <td mat-footer-cell *matFooterCellDef>{{ recurringCount() }} recurring</td>
+        </ng-container>
+
+        <ng-container matColumnDef="recurrenceFrequency">
+          <th mat-header-cell *matHeaderCellDef>Frequency</th>
+          <td mat-cell *matCellDef="let element">{{ element.recurrenceFrequency }}</td>
+          <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
         <ng-container matColumnDef="amount">
@@ -37,15 +46,20 @@
           <td mat-cell *matCellDef="let element">
             {{ element.amount | currency: element.currency }}
           </td>
+          <td mat-footer-cell *matFooterCellDef>
+            {{ signedTotalAmount() }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef>Date</th>
           <td mat-cell *matCellDef="let element">{{ element.date | date: 'short' }}</td>
+          <td mat-footer-cell *matFooterCellDef>--</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
       </table>
     </mat-card-content>
   }
