--- a/frontend/src/app/components/side-nav-component/side-nav-component.html
+++ b/frontend/src/app/components/side-nav-component/side-nav-component.html
@@ -30,7 +30,7 @@
               >
                 <mat-icon matListItemIcon>home</mat-icon>
                 <span matListItemTitle>Home</span>
-                <span matListItemLine>Dashboards</span>
+                <span matListItemLine>-</span>
               </a>
               <a
                 mat-list-item
@@ -41,9 +41,9 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 [attr.aria-current]="rlaConfig.isActive ? 'page' : null"
               >
-                <mat-icon matListItemIcon>gear</mat-icon>
-                <span matListItemTitle>Config</span>
-                <span matListItemLine>Setup your data</span>
+                <mat-icon matListItemIcon>query_stats</mat-icon>
+                <span matListItemTitle>Tracking</span>
+                <span matListItemLine>Add and Track your expenses</span>
               </a>
             </app-flex>
           </mat-nav-list>
