--- a/frontend/src/app/components/welcome-layout/login-component/login-component.html
+++ b/frontend/src/app/components/welcome-layout/login-component/login-component.html
@@ -1,7 +1,10 @@
 <app-welcome-layout-component
   title="Login Into the bank tracker"
   subtitle="Please enter your credentials to access your account"
-  [actions]="[{ text: 'Submit', action: onSubmit.bind(this) }]"
+  [actions]="[
+    { text: 'Register', action: redirectToRegister.bind(this) },
+    { text: 'Submit', action: onSubmit.bind(this) },
+  ]"
 >
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
     <app-flex [vertical]="true" gap="8px" justify="center" align="center" class="login-form-flex">
