--- a/frontend/src/app/components/tracking/monthly-recap-component/monthly-recap-component.html
+++ b/frontend/src/app/components/tracking/monthly-recap-component/monthly-recap-component.html
@@ -57,6 +57,22 @@
           <td mat-footer-cell *matFooterCellDef>--</td>
         </ng-container>
 
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Actions</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-icon aria-label="Edit" class="action-icon edit" (click)="onEditClicked(element)"
+              >edit</mat-icon
+            >
+            <mat-icon
+              aria-label="Delete"
+              class="action-icon delete"
+              (click)="onDeleteClicked(element)"
+              >delete</mat-icon
+            >
+          </td>
+          <td mat-footer-cell *matFooterCellDef>--</td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
