--- a/frontend/src/app/components/side-nav-component/side-nav-component.html
+++ b/frontend/src/app/components/side-nav-component/side-nav-component.html
@@ -43,7 +43,7 @@
               >
                 <mat-icon matListItemIcon>query_stats</mat-icon>
                 <span matListItemTitle>Tracking</span>
-                <span matListItemLine>Add and Track your expenses</span>
+                <span matListItemLine>Track your expenses</span>
               </a>
               <a
                 mat-list-item
@@ -56,7 +56,7 @@
               >
                 <mat-icon matListItemIcon>query_stats</mat-icon>
                 <span matListItemTitle>Balance</span>
-                <span matListItemLine>View your account balance</span>
+                <span matListItemLine>Balance & Prediction</span>
               </a>
             </app-flex>
           </mat-nav-list>
@@ -64,6 +64,22 @@
       </div>
 
       <mat-nav-list aria-label="Account actions">
+        <a mat-list-item class="nav-item" (click)="onToggleTheme()" style="cursor: pointer">
+          <mat-icon matListItemIcon>
+            @if (themeService.isDarkMode()) {
+              light_mode
+            } @else {
+              dark_mode
+            }
+          </mat-icon>
+          <span matListItemTitle>
+            @if (themeService.isDarkMode()) {
+              Light Mode
+            } @else {
+              Dark Mode
+            }
+          </span>
+        </a>
         <a mat-list-item class="nav-item" (click)="onLogout()" style="cursor: pointer">
           <mat-icon matListItemIcon>logout</mat-icon>
           <span matListItemTitle>Logout</span>
