style(side-nav): adjust height and alignment for sidenav components

--- a/frontend/src/app/components/side-nav-component/side-nav-component.html
+++ b/frontend/src/app/components/side-nav-component/side-nav-component.html
@@ -17,8 +17,8 @@
         </div>
 
         <nav aria-label="Main navigation">
-          <mat-nav-list>
-            <app-flex [vertical]="true" gap="0" justify="center">
+          <mat-nav-list class="mat-list">
+            <app-flex [vertical]="true" gap="8px" justify="center">
               <a
                 mat-list-item
                 routerLink="/home"
